--- a/loginestilo.css
+++ b/loginestilo.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 
 body {
-    background-image: url(fotos1/TeachMe2.png);
+    background-image: url(fotos1/TeachMe4.jpg);
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -14,7 +14,7 @@ form {
     border-top-left-radius: 40px;
     border-bottom-left-radius: 40px;
     float: right;
-    font-size: 12px;
+    font-size: 15px;
     padding: 100px 100px 150px 200px;
     width: 580px;
     height: 600px;
@@ -31,10 +31,6 @@ form h3 {
     font-size: 20px;
 }
 
-aside {
-    font-size: 15px;
-}
-
 .botones {
     background-color: #fbfcfc;
     padding: 10px;
@@ -47,9 +43,13 @@ aside {
 }
 
 #logIn {
-    background-image:url(fotos1/botondegrade.png);
+    background-color: #2c3e50;
     padding: 13px 25px 13px 25px;
     border-radius: 18px;
     color:  #fbfcfc;
-    
+    font-family: 'Poppins', sans-serif;
+}
+
+.min-size {
+    font-size: 12px;
 }
