--- a/loginestilo.css
+++ b/loginestilo.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 
 body {
-    background-image: url(fotos1/TeachMe2.jpg);
+    background-image: url(fotos1/TeachMe2.png);
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -29,6 +29,7 @@ form h2 {
 
 form h3 {
     font-size: 20px;
+    color: #429bc8;
 }
 
 .botones {
@@ -36,18 +37,43 @@ form h3 {
     padding: 10px;
     border-radius: 11px;
     font-family: 'Poppins', sans-serif;
+    display: inline-flex;
+    border: solid 1px #809bb4;
+    width: 230px;
+    font-size: 14px;
+}
+
+.botones:hover {
+    background-color: #c4def746;
+}
+
+img{
+    padding-right: 10px;
 }
 
 .formulario {
     border-radius: 6px;
+    border: solid 1px #809bb4;
+    width: 250px;
+    height: 20px;
+}
+
+a {
+    text-decoration-color: #2d89b6;
+    color: #2d89b6;
 }
 
 #logIn {
-    background-color: #2c3e50;
+    background-color: #429bc8;
     padding: 13px 25px 13px 25px;
     border-radius: 18px;
     color:  #fbfcfc;
     font-family: 'Poppins', sans-serif;
+    border:#429bc8 5px;
+}
+
+#logIn:hover {
+    background-color: #3488b3;
 }
 
 .min-size {
